--- a/src/main/resources/templates/productDetails.html
+++ b/src/main/resources/templates/productDetails.html
@@ -10,6 +10,13 @@
 <body>
 
 	<div class="col" layout:fragment="main-content">
+		<form method="post" th:action="@{/updateQuantity}" th:object="${itm}" hidden="true" id="form">
+			<div class="form-group has-search" style="margin: 0; margin-right: 20px">
+				<input type="text" id="itmId" th:field="*{id}">
+				<input type="text" id="itmQuantity" th:field="*{quantity}">
+				<input type="text" id="desc" th:field="*{description}">
+			</div>
+        </form>
 
 		<div class="container">
 			<h1>Product Details</h1>
@@ -68,27 +75,18 @@
 								</div>
 								<div class="row">
 									<div class="col-xs-6" style="margin-left: 13px;">
-										<div class="product_quantity">
-											<span>QTY: </span> <input id="quantity_input" type="text"
-												pattern="[0-9]*" value="1">
-											<div class="quantity_buttons">
-												<div id="quantity_inc_button"
-													class="quantity_inc quantity_control">
-													<i class="fas fa-chevron-up"></i>
-												</div>
-												<div id="quantity_dec_button"
-													class="quantity_dec quantity_control">
-													<i class="fas fa-chevron-down"></i>
-												</div>
-											</div>
-										</div>
+										<input min="1"
+											th:max="${product.getQuantity()}" type="number"
+											id="pd" autocomplete="off"
+											value="1" step="1" />
+										<input type="hidden" th:value="${product.getId()}" id="productId">
 									</div>
 								</div>
+								<br>
 								<div class="row">
 									<div class="col-xs-6">
-										<a class="btn btn-primary shop-button"
-											sec:authorize="hasAuthority('ROLE_BUYER')"
-											th:href="@{/addProduct}"> Add To Cart </a> <a
+										<a class="btn btn-primary shop-button" style="color: white; cursor: pointer;"
+											sec:authorize="hasAuthority('ROLE_BUYER')" id="add"> Add To Cart </a> <a
 											class="btn btn-success shop-button"
 											sec:authorize="hasAuthority('ROLE_BUYER')"
 											th:href="@{/follow (id=${product.id})}"> Follow Seller </a>
