--- a/src/main/resources/templates/update-product.html
+++ b/src/main/resources/templates/update-product.html
@@ -10,7 +10,7 @@
 
 <div class="col" layout:fragment="main-content">
 
-    <div class="row">
+    <div class="row" style="text-align: center">
         <div class="col-md-4"></div>
         <div class="col-md-4">
             <h1>Update Product</h1>
