--- a/src/main/resources/templates/productDetails.html
+++ b/src/main/resources/templates/productDetails.html
@@ -104,7 +104,7 @@
 						</div>
 					</div>
 					<div th:each="review: ${reviews}">
-						<div class="card">
+						<div class="card" th:if="${review.reviewStatus}">
 							<div class="card-body">
 								<div class="row">
 									<div class="col-md-2">
