--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 	<div class="col" layout:fragment="main-content">
-		<input type="hidden" th:value="${tab}" id="tab" /> <input
-			type="hidden" th:value="${status}" id="status" />
+		<input type="hidden" th:value="${tab}" id="tab" />
+		<input type="hidden" th:value="${status}" id="status" />
 		<div class="container" sec:authorize="hasAuthority('ROLE_ADMIN')"
 			style="margin-top: 10px;">
 			<br>
