--- a/src/main/resources/templates/productDetails.html
+++ b/src/main/resources/templates/productDetails.html
@@ -10,6 +10,7 @@
 <body>
 
 	<div class="col" layout:fragment="main-content">
+		<input type="hidden" th:value="${status}" id="status" />
 		<form method="post" th:action="@{/updateQuantity}" th:object="${itm}"
 			hidden="true" id="form">
 			<div class="form-group has-search"
