--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,6 +9,7 @@
 <body>
 
 	<div class="col" layout:fragment="main-content">
+		<input type="hidden" th:value="${status}" id="status" />
 		<div class="card text-white bg-dark mb-3" style="margin: auto; width: 30%; top: 20px">
 			<div class="card-body" style="padding-top: 0">
 				<div style="text-align: center">
